...
    "PDF" : {

    },
    "Pin" : {

    },
    "Project Error" : {

    },
    "Project Files" : {

    },
    "Project Settings" : {
...
